--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,79 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+    --font-jaro: Jaro, sans-serif; 
+    --font-jetbrains: JetBrains Mono, monospace;
+    --color-primary: #FAF7ED;
+    --color-secondary: #FBB48E;
+    --color-accent: #F48B7C;
+    --color-dark: #000000;
+    --text-xs: 1rem;
+    --text-sm: 1.25rem;
+    --text-md: 1.56rem;
+    --text-lg: 2.5rem;
+    --text-xl: 3.125rem;
+    --text-2xl: 3.75rem;
+    --text-3xl: 9.4rem;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@keyframes float {
+    0%   { transform: translateY(0px); }
+    50%  { transform: translateY(-15px) translateX(-8px); }
+    100% { transform: translateY(0px); }
   }
-}
+  
+  
+  .float {
+    animation: float 3s ease-in-out infinite;
+    
+  }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@layer components {
+    .typography {
+        p {
+            font-size: var(--text-xs);
+            font-family: var(--font-jetbrains);
+            font-weight: 400;
+            color: var(--color-dark);
+        }
+        h1 {
+            font-size: var(--text-3xl);
+            font-family: var(--font-jaro);
+            font-weight: 500;
+            color: var(--color-dark);
+        }
+        h2 {
+            font-size: var(--text-xl);
+            font-family: var(--font-jetbrains);
+            font-weight: 600;
+            color: var(--color-dark);
+        }
+
+        h3 {
+            font-size: var(--text-2xl);
+            font-family: var(--font-jaro);
+            font-weight: 500;
+            color: var(--color-dark);
+        }
+
+        h4 {
+            font-size: var(--text-lg);
+            font-family: var(--font-jaro);
+            font-weight: 400;
+            color: var(--color-dark);
+        }
+
+        h5 {
+            font-size: var(--text-md);
+            font-family: var(--font-jetbrains);
+            font-weight: 300;
+            color: var(--color-dark);
+        }
+
+        a {
+            font-size: var(--text-sm);
+            font-family: var(--font-jetbrains);
+        }
+
+    }
 }
