change tag colors

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,9 @@
     --color-secondary: #FBB48E;
     --color-accent: #F48B7C;
     --color-dark: #000000;
+    --color-tag-perso: #6BC7CD;
+    --color-tag-pro: #96B18B;
+    --color-tag-ecole: #F48B7C;
     --text-xs: 1rem;
     --text-sm: 1.25rem;
     --text-md: 1.56rem;
